--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,11 @@
-<h1> Hello World! </h1>
+<h2 style="color:red;" >We got Rails running, we added content to the database, we migrated and we printed the content to the screen, WooHoo!!</h2>
+<h1>Articles</h1>
+
+<ul>
+  <% @welcome.each do |welcome| %>
+    <li>
+      <%= welcome.title %>
+    </li>
+  <% end %>
+</ul>
+
